[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-sequence-analyzer"
version = "1.0.0"
description = "A comprehensive web application for DNA sequence analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Gabriele Iacopo Langellotto", email = "support@dna-sequence-analyzer.dev"}
]
maintainers = [
    {name = "Gabriele Iacopo Langellotto", email = "support@dna-sequence-analyzer.dev"}
]
keywords = [
    "bioinformatics",
    "dna",
    "sequence-analysis",
    "genomics",
    "molecular-biology",
    "gc-content",
    "orf-detection",
    "primer-design",
    "streamlit",
    "biopython"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
dependencies = [
    "streamlit>=1.28.0",
    "biopython>=1.81",
    "scikit-bio>=0.6.0",
    "pandas>=2.0.3",
    "matplotlib>=3.7.2",
    "plotly>=5.17.0",
    "numpy>=1.26.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0"
]

[project.urls]
Homepage = "https://github.com/GIL794/dna-sequence-analyzer"
Documentation = "https://github.com/GIL794/dna-sequence-analyzer/tree/main/docs"
Repository = "https://github.com/GIL794/dna-sequence-analyzer"
"Bug Reports" = "https://github.com/GIL794/dna-sequence-analyzer/issues"
Changelog = "https://github.com/GIL794/dna-sequence-analyzer/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "Bio.*",
    "skbio.*",
    "streamlit.*",
    "plotly.*"
]
ignore_missing_imports = true
